# BlackJack-TelegramBot

./: .env.dist  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 79ae3b07a903_create_admin_table.py  a66b1e6a53cc_added_game_tables.py
app/admin/: dataclasses.py  models.py  schemes.py  views.py
app/auth/: decorators.py
app/bot/: manager.py
app/chat/: dataclasses.py  routes.py  schemes.py  views.py
app/game/: enums.py  handlers.py  keyboards.py  logic.py  models.py  states.py  utils.py
app/player/: dataclasses.py  routes.py  schemes.py  views.py
app/store/: __init__.py
app/store/admin/: accessor.py
app/store/database/: __init__.py  database.py  sqlalchemy_base.py
app/store/game/: accessor.py
app/store/tg_api/: accessor.py  dataclassess.py  poller.py
app/web/: app.py  config.py  middlewares.py  routes.py  utils.py
