[tool.poetry]
name = "blackjack-telegrambot"
version = "0.1.0"
description = ""
authors = ["vad-ii-k <sazanov7615@gmail.com>"]
readme = "README.md"
packages = [{include = "blackjack_telegrambot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
alembic = "^1.9.4"
marshmallow = "^3.19.0"
aiohttp-apispec = "^2.2.3"
aiohttp-session = "^2.12.0"
environs = "^9.5.0"
cryptography = "^41.0.3"
asyncpg = "^0.27.0"
pydantic = "^1.10.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[tool.black]
line-length = 80
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true
line_length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
